# pres

./: .gitignore  LICENSE  README.md  _brand.yml  pres  pyproject.toml
partials/: _agenda.qmd  _credits.qmd  _intro.qmd  _thank-you.qmd
src/presentation_maker/: __init__.py  __main__.py  cli.py  generator.py  models.py  pdf.py  templates.py  wizard.py
styles/: components.scss
